--- a/alphonce.cfg
+++ b/alphonce.cfg
@@ -1,5 +1,7 @@
 import os
-SQLALCHEMY_DATABASE_URI = os.environ['OPENSHIFT_POSTGRESQL_DB_URL']
+
+SQLALCHEMY_DATABASE_URI = 'sqlite:////tmp/test.db'
+# SQLALCHEMY_DATABASE_URI = os.environ['OPENSHIFT_POSTGRESQL_DB_URL']
 SQLALCHEMY_DATABASE_URI2='postgresql://localhost/flask'
 SQLALCHEMY_DATABASE_SQLITE = 'sqlite:////tmp/test.db'
 SQLALCHEMY_ECHO = False
