--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Jinja2==2.10
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
+psycopg2-binary==2.8.3 
 psycopg2==2.5.2
 pylint==1.7.4
 six==1.11.0
