--- a/Pipfile
+++ b/Pipfile
@@ -1,34 +1,20 @@
 [[source]]
 name = "pypi"
-url = "https://pypi.org/simple"
+url = "https://pypi.python.org/simple"
 verify_ssl = true
 
 [dev-packages]
-pylint = "*"
 
 [packages]
-astroid = "==1.5.3"
-click = "==6.7"
-colorama = "==0.3.9"
-gunicorn = "==19.7.1"
-isort = "==4.2.15"
-itsdangerous = "==0.24"
-lazy-object-proxy = "==1.3.1"
-mccabe = "==0.6.1"
-psycopg2 = "==2.5.2"
-pylint = "==1.7.4"
-six = "==1.11.0"
-virtualenv = "==15.1.0"
-wrapt = "==1.10.11"
-Flask = "==0.12.2"
-Flask-SQLAlchemy = "==2.3.2"
-Jinja2 = "==2.10"
-MarkupSafe = "==1.0"
-SQLAlchemy = "==1.1.15"
-Werkzeug = "==0.12.2"
-psycopg2-binary = "==2.8.3"
+flask = "*"
+flask-sqlalchemy = "*"
+sqlalchemy = "*"
 flask-migrate = "*"
 flask-script = "*"
+psycopg2 = "*"
 
 [requires]
-python_version = "3.5"
+python_version = "3.7.3"
+
+[pipenv]
+allow_prereleases = true
