--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ url = "https://pypi.python.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pylint = "*"
 
 [packages]
 flask = "*"
@@ -14,7 +15,7 @@ flask-script = "*"
 psycopg2 = "*"
 
 [requires]
-python_version = "3.7.3"
+python_version = "3.6"
 
 [pipenv]
 allow_prereleases = true
